--- a/apply1/index.html
+++ b/apply1/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header>
-			<h1 class="apply-title">React-Apply</h1>
+			<h1 class="apply-title">任务清单(react)</h1>
 		</header>
 		<div class="container apply-container">
 			<div id="app"></div>
